app/jvm/src/main/assets/stylesheets/main.less
/****** general ******/
.global-messages {
  position:fixed;
  top: 6px;
  left: 23%;
  width: 54%;
  padding-top: 7px;
  padding-bottom: 9px;
  z-index:9999;
}

h1 {
  .buttons {
    padding-left: 100px;
    font-size: 23px;
    i:hover {
      color: orange;
      cursor: pointer;
    }
  }
}

h2 {
  padding-top: 10px;
  padding-bottom: 8px;
  font-weight: bold;
  font-size: 26px;
}

.table {
  &.table-overflow-elipsis {
    td, th {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: 350px;
    }
  }
  .no-entries {
    font-style: italic;
  }
  .deemphasized td {
    color: #BBB;
  }
  .expand-on-click {
    cursor: pointer;
  }
  .primary-title {
    min-width: 246px;
    float: left;
  }
  .secondary-title {
    font-weight: normal;
    padding-left: 20px;
  }
}

select:-moz-focusring { // Remove outline from select box in FF: http://stackoverflow.com/a/18853002/1218058
    color: transparent;
    text-shadow: 0 0 0 #000;
}

// Disable Bootstrap progress bar animations
.progress .progress-bar {
  transition: none;
}

/****** copied from Bootstrap dataTables ******/
table.table-bordered {
  thead th, thead td {
    border-left-width: 0;
    border-top-width: 0;
  }
  tbody th, tbody td {
    border-left-width: 0;
    border-bottom-width: 0;
  }
  tfoot th, tfoot td {
    border-left-width: 0;
    border-bottom-width: 0;
  }
  th:last-child, td:last-child {
    border-right-width: 0;
  }
}

/****** loading page ******/
.loading {
  text-align: center;

  .loading-icon {
    font-size: 100px;
  }
  .loading-message {
    font-size: 30px;
  }
}

/***********************************************/
/************ quiz-specific styling ************/
/***********************************************/

/****** SbAdmin overrides ******/
#page-wrapper {
  margin: 0; // Remove left sidebar
  padding: 0;
}

/****** Global layout ******/
#content-wrapper {
  display: flex;

  #left-content-wrapper {
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: 300px;

    padding: 20px 10px 0px 10px;

    ul.teams-list {
      list-style: none;
      padding: 0;
      margin: 0;

      li {
        padding-bottom: 30px;

        .name {
          font-weight: bold;
          font-size: 30px;
          text-align: center;

        }
        .score {
          font-weight: bold;
          font-size: 50px;
          text-align: center;
        }
        i {
          &.pressed {
            color: black;
          }
          &:not(.pressed) {
            color: #BBB;
          }
        }
      }
    }
  }
  #right-content-wrapper {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: auto;

    padding: 20px 10px 0px 40px;
  }
}

/****** Shared quiz-view / master-view ******/
.quiz-view, .master-view {
  .quiz-progres-indicator {
    font-size: 23px;
    text-align: center;
    i.unseen {
      color: #ccc;
    }
  }

  .round-title {
    text-align: center;
    font-size: 70px;
    font-weight: bold;
    color: #006;
  }
  .question-wrapper {
    text-align: center;
    .admin-only-data {
      color: #DDD;
    }
    .question {
      padding-top: 20px;
      font-size: 45px;
      font-weight: bold;
    }
    .verbal-question {
      font-size: 35px;
    }
    .verbal-answer {
      font-size: 35px;
      color: green;
      font-weight: bold;
    }
    .textual-question {
      font-size: 35px;
    }
    .points-metadata {
      font-size: 25px;
    }
    .image-and-choices-row {
      padding-top: 25px;
      display: flex;

      .image-holder {
        flex-grow: 1;
        flex-shrink: 0;
        flex-basis: 300px;

        padding-right: 50x;
        width: 500px;
        &.small {
          max-width: 1000px;
        }
        &.large {
          max-width: 1480px;
        }
        img {
          max-width: 100%;
          &.small {
            max-height: 330px;
          }
          &.large {
            max-height: 540px;
          }
        }
      }

      .choices-holder {
        flex-grow: 1;
        flex-shrink: 0;
        flex-basis: auto;

        .choices {
          list-style: none;
          font-size: 35px;
          display: inline-block;
          text-align: left;
          padding-left: 0;
          .choice-arrow {
            padding-right: 25px;
          }
          .correct {
            color: green;
            font-weight: bold;
          }
          .incorrect {
            color: red;
            text-decoration: line-through;
          }
        }
      }
    }
    .submissions-without-choices {
      padding-top: 25px;
      font-size: 35px;
      &:before {
        content: "x";
        color: white;
      }
    }
    .maybe-obfuscated-answer-wrapper {
      padding-top: 25px;
      font-size: 23px;
      .maybe-obfuscated-answer {
        color: black;
        padding-left: 30px;
        padding-right: 30px;
        &.obfuscated {
          background-color: black;
        }
      }
    }
    .answer {
      padding-top: 25px;
      font-size: 40px;
      color: green;
    }
    .answer-detail {
      font-size: 30px;
      color: green;
    }
    .timer {
      padding-top: 25px;
    }
  }
}

/****** master-view only ******/
.master-view {
  .quiz-navigation-buttons {
    text-align: center;
    padding-bottom: 40px;
  }

  .table-teams {
    form {
      display: flex;
      input {
        flex: 2;
        border: none;
      }
      input.value-has-changed {
        color: blue;
      }
      button {
        margin-left: 10px;
      }
    }
  }
}

/****** table-gamepads ******/
.table-gamepads {
  table-layout: fixed;
  td {
    i {
      font-size: 25px;
      padding-right: 20px;
    }
  }
}

